feat:缓存操作逻辑优化